0.1.3 (2014-??-??)
  * added simplecov for testing

0.1.2 (2014-10-17)
  * fixed RSS feed (internal server error and stripped HTML tags correctly for
    the item title)
  + added classes to some elements to make creating stylesheets a bit easier
  + added ability to delete posts
  * more tests

0.1.1 (2014-10-12)
  + delete users via manage.rb
  + editing posts works now

0.1.0 (2014-10-11)
  * initial release
  * basic features (create new posts, RSS feeds)