@@ -1,5 +1,9 @@
 0.1.3 (2014-??-??)
-  * added simplecov for testing
+  + added simplecov for testing
+  + added "Posts" to the navigation bar
+  + added "Go back" on every page
+  * added a red border to the "Danger zone" on the edit page
+  * fixed navigation seperators
 
 0.1.2 (2014-10-17)
   * fixed RSS feed (internal server error and stripped HTML tags correctly for
